Fixed vertical tabs collapsed height bug

--- a/src/tabs/tabs.less
+++ b/src/tabs/tabs.less
@@ -29,10 +29,10 @@
 
     // TODO: Look into creating fade-in mixin(s) to shared among components
     > .tab-pane {
-      position: absolute;
+      /*position: absolute;*/
       top: 0;
       width: 75%;
-      display: block;
+      /*display: block;*/
       opacity: 0;
       -webkit-transition: opacity  .2s 0s;
       -moz-transition: opacity  .2s 0s;
